--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: News Hub
+title: 🌏 News Hub
 description: >- # this means to ignore newlines until "baseurl:"
   Global Intelligence
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
